--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -4,11 +4,12 @@
 
 set $mod Mod4
 
-font pango:Hack 9
+font pango:Hack 8
 
 floating_modifier $mod
 
 bindsym $mod+Return exec --no-startup-id $HOME/.bin/open-terminal.sh
+#bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -292,11 +293,17 @@ mode "$mode_gaps_left" {
 # autostarts
 exec_always --no-startup-id i3-autodisplay -config ~/.config/i3-autodisplay/config.yml
 exec_always --no-startup-id exec feh --bg-scale --randomize ~/workspace/wallpapers/*.png
+exec --no-startup-id flameshot
+exec --no-startup-is nm-applet
+exec --no-startup-id dex --autostart --environment i3
+exec --no-startup-is setxkbmap -layout us -variant intl
+exec --no-startuo-is xinput set-prop "DELL0782:00 06CB:7E92 Touchpad" "libinput Tapping Enabled" 1
 
 bar {
-    font pango:Hack, FontAwesome 9
+    font pango:Hack, FontAwesome 8
     position top
     mode dock
+    #status_command i3status
     status_command /usr/bin/i3status-rs $HOME/.config/i3/status.toml
     colors {
         separator #666666
