--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,26 +1,28 @@
-# start with window 1 (instead of 0)
-set -g base-index 1
-
 # due to weechat
 # see: https://github.com/GermainZ/weechat-vimode/blob/master/FAQ.md#esc-key-not-being-detected-instantly
 set -sg escape-time 0
-
 set -g renumber-windows on # reorder windows when deleting..
+
+# Run tmux-cht
+bind-key -r i run-shell "tmux neww tmux-cht"
+
+# Run tms
+bind-key -r o run-shell "tmux neww tms"
 
 # start with pane 1
 set -g pane-base-index 1
 
 # modify prefix
 unbind C-b
-set -g prefix C-x
-bind C-x send-prefix
+set -g prefix C-a
+bind a send-prefix
 
-# source config file
-bind R source-file ~/.tmux.conf
+# Screen like binding for last window
+bind C-a last-window
 
 # allow terminal scrolling
 set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
-set -g default-terminal "screen-256color"
+set -g default-terminal screen-256color
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
@@ -53,13 +55,20 @@ bind : command-prompt
 bind -n C-k clear-history
 
 # resize panes like vim
-bind < resize-pane -L 10
-bind > resize-pane -R 10
-bind - resize-pane -D 10
-bind + resize-pane -U 10
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+# Use Alt + vim keyboard to navigate between panels
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 
 # disable sound bell
 set -g bell-action none
+
 # disable visual bell
 set -g visual-bell off
 
@@ -97,7 +106,7 @@ set -g @colors-base16 'gruvbox-dark-hard'
 
 # statusbar formatting
 set-option -g status-left "#{session_name} "
-set-option -g status-right "📩 P: #{maildir_counter_1}, W: #{maildir_counter_2} | #{prefix_highlight} #{battery_icon} #{battery_percentage} | %d-%m-%Y %H:%M:%S | Online: #{online_status}| #{weather} | #(gitmux -cfg ~/.gitmux.conf '#{pane_current_path}') "
+set-option -g status-right "#{prefix_highlight} #{battery_icon} #{battery_percentage} | %d-%m-%Y %H:%M:%S | Online: #{online_status} | #{weather} | #(gitmux -cfg ~/.gitmux.conf '#{pane_current_path}') "
 
 set-option -wg window-status-current-format " #{window_index} #{window_name} "
 set-option -wg window-status-format " #{window_index} #{window_name} "
@@ -151,4 +160,24 @@ set-option -wg clock-mode-colour "#FE8019"
     set-option -wg copy-mode-current-match-style "bg=#FE8109,fg=#3C3836"
 %endif
 
+# Copy system
+if-shell -b 'echo $XDG_SESSION_TYPE | grep -q x11' "\
+    bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard > /dev/null'; \
+    bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard > /dev/null'; \
+    bind-key C-p run 'xclip -out -selection clipboard | tmux load-buffer - ; tmux paste-buffer'"
+
+if-shell -b 'echo $XDG_SESSION_TYPE | grep -q wayland' "\
+    bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'wl-copy'; \
+    bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'wl-copy'; \
+    bind-key C-p run 'wl-paste --no-newline | tmux load-buffer - ; tmux paste-buffer'" "\
+    \
+    bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'cat - >/dev/clipboard'; \
+    bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'cat - >/dev/clipboard'; \
+    bind-key C-p run 'cat /dev/clipboard | tmux load-buffer - ; tmux paste-buffer'"
+
 set -g status-right-length 150
+
+
+# source config file
+unbind r
+bind r source-file ~/.tmux.conf
