--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -22,7 +22,8 @@ bind C-a last-window
 
 # allow terminal scrolling
 set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
-set -g default-terminal screen-256color
+set -ag terminal-overrides ",xterm-256color:RGB"
+set -g default-terminal "tmux-256color"
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
