tmux: add sync panels bind

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -67,6 +67,11 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
+# easily toggle synchronization (mnemonic: e is for echo)
+# sends input to all panes in a given window.
+bind e setw synchronize-panes on
+bind E setw synchronize-panes off
+
 # disable sound bell
 set -g bell-action none
 
