i3: replace dmenu by rofi

--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -15,7 +15,7 @@ bindsym $mod+Return exec --no-startup-id $HOME/.bin/terminal
 bindsym $mod+Shift+q kill
 
 # start run-dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id bash -c "$HOME/.bin/run-dmenu launcher"
+bindsym $mod+d exec --no-startup-id bash -c "rofi -show drun"
 bindsym $mod+p exec --no-startup-id bash -c "$HOME/.bin/run-dmenu clipboard"
 bindsym $mod+o exec --no-startup-id bash -c "$HOME/.bin/run-dmenu"
 
