--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -94,13 +94,10 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'xamut/tmux-weather'
 set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-maildir-counter'
 set -g @plugin 'mattdavis90/base16-tmux'
 set -g @plugin 'Alkindi42/tmux-bitwarden'
 
@@ -112,13 +109,10 @@ set -g @colors-base16 'gruvbox-dark-hard'
 
 # statusbar formatting
 set-option -g status-left "#{session_name} "
-set-option -g status-right "#{prefix_highlight} #{battery_icon} #{battery_percentage} | %d-%m-%Y %H:%M:%S | Online: #{online_status} | #{weather} | #(gitmux -cfg ~/.gitmux.conf '#{pane_current_path}') "
+set-option -g status-right "#{prefix_highlight} Online: #{online_status} | #(gitmux -cfg ~/.gitmux.conf '#{pane_current_path}') "
 
 set-option -wg window-status-current-format " #{window_index} #{window_name} "
 set-option -wg window-status-format " #{window_index} #{window_name} "
-
-# set mail dirs
-set -g @maildir_counters '~/mail/personal/inbox/new|~/mail/personal/work/new'
 
 set -g @prefix_highlight_fg 'black'
 set -g @prefix_highlight_show_copy_mode 'on'
