--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -177,6 +177,8 @@ if-shell -b 'echo $XDG_SESSION_TYPE | grep -q wayland' "\
 
 set -g status-right-length 150
 
+# Run session switch
+bind-key -r g run-shell "tmux neww tmux-session-switch"
 
 # source config file
 unbind r
