--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,4 +1,4 @@
-# due to weechat
+# due to weechattmux.
 # see: https://github.com/GermainZ/weechat-vimode/blob/master/FAQ.md#esc-key-not-being-detected-instantly
 set -sg escape-time 0
 set -g renumber-windows on # reorder windows when deleting..
@@ -39,9 +39,9 @@ set -g history-limit 100000
 
 # splitting and current path (same to binding c
 unbind %
-bind h split-window -h -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
 unbind '"'
-bind v split-window -v -c "#{pane_current_path}"
+bind h split-window -v -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 # with mouse (click on pretty little boxes)
