tmux: set max length to status-left

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -176,6 +176,7 @@ if-shell -b 'echo $XDG_SESSION_TYPE | grep -q wayland' "\
     bind-key C-p run 'cat /dev/clipboard | tmux load-buffer - ; tmux paste-buffer'"
 
 set -g status-right-length 150
+set -g status-left-length 150
 
 # Run session switch
 bind-key -r g run-shell "tmux neww tmux-session-switch"
