--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -100,6 +100,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'mattdavis90/base16-tmux'
 set -g @plugin 'Alkindi42/tmux-bitwarden'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 set -g @bw-key 'T'
 set -g @bw-copy-to-clipboard 'on'
