tmux: fix online/git order

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -110,7 +110,7 @@ set -g @colors-base16 'gruvbox-dark-hard'
 
 # statusbar formatting
 set-option -g status-left "#{session_name} "
-set-option -g status-right "#{prefix_highlight} Online: #{online_status} | #(gitmux -cfg ~/.gitmux.conf '#{pane_current_path}') "
+set-option -g status-right "#{prefix_highlight} #(gitmux -cfg ~/.gitmux.conf '#{pane_current_path}') | Online: #{online_status} "
 
 set-option -wg window-status-current-format " #{window_index} #{window_name} "
 set-option -wg window-status-format " #{window_index} #{window_name} "
