--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -26,6 +26,9 @@ selection_foreground #2f2f2f
 # The background for selections
 selection_background #2f2f2f
 
+# Set backgroud opacity
+background_opacity 0.95
+
 # The cursor color
 cursor           #d5c4a1
 
