feat: Add shortcut to open general notes

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -9,6 +9,9 @@ bind-key -r i run-shell "tmux neww tmux-cht"
 # Run tms
 bind-key -r o run-shell "tmux neww tms"
 
+# Run general notes
+bind-key -r u run-shell "tmux neww notes o notes"
+
 # start with pane 1
 set -g pane-base-index 1
 
