fix: local user bin path

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -4,10 +4,10 @@ set -sg escape-time 0
 set -g renumber-windows on # reorder windows when deleting..
 
 # Run tmux-cht
-bind-key -r i run-shell "tmux neww tmux-cht"
+bind-key -r i run-shell "tmux neww ~/.bin/tmux-cht"
 
 # Run tms
-bind-key -r o run-shell "tmux neww tms"
+bind-key -r o run-shell "tmux neww ~/.bin/tms"
 
 # Run general notes
 bind-key -r u run-shell "tmux neww notes o notes"
