--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -3,15 +3,6 @@
 set -sg escape-time 0
 set -g renumber-windows on # reorder windows when deleting..
 
-# Run tmux-cht
-bind-key -r i run-shell "tmux neww ~/.bin/tmux-cht"
-
-# Run tms
-bind-key -r o run-shell "tmux neww ~/.bin/tms"
-
-# Run general notes
-bind-key -r u run-shell "tmux neww notes o notes"
-
 # start with pane 1
 set -g pane-base-index 1
 
@@ -182,9 +173,18 @@ if-shell -b 'echo $XDG_SESSION_TYPE | grep -q wayland' "\
 set -g status-right-length 150
 set -g status-left-length 150
 
-# Run session switch
-bind-key -r g run-shell "tmux neww tmux-session-switch"
-
 # source config file
 unbind r
 bind r source-file ~/.tmux.conf
+
+# Run tmux-cht
+bind-key -r i run-shell "tmux neww ~/.bin/tmux-cht"
+
+# Run tms
+bind-key -r o run-shell "tmux neww ~/.bin/tms"
+
+# run session switch
+bind-key -r g run-shell "tmux neww ~/.bin/tmux-session-switch"
+
+# Run general notes
+bind-key -r u run-shell "tmux neww notes o notes"
