--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -187,4 +187,4 @@ bind-key -r o run-shell "tmux neww ~/.bin/tms"
 bind-key -r g run-shell "tmux neww ~/.bin/tmux-session-switch"
 
 # Run general notes
-bind-key -r u run-shell "tmux neww notes o notes"
+bind-key -r u run-shell "tmux neww ~/.bin/notes-picker"
