--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -25,11 +25,14 @@ setw -g mode-keys vi
 # Setup 'v' to begin selection as in Vim
 bind P paste-buffer
 
-# use mouse in copy mode
+# Use mouse in copy mode
 setw -g mouse on
 
-# history
+# History
 set -g history-limit 100000
+
+# Dont detach when destroy a session
+set-option -g detach-on-destroy off
 
 # splitting and current path (same to binding c
 unbind %
