--- a/dot_config/i3-autodisplay/config.yml
+++ b/dot_config/i3-autodisplay/config.yml
@@ -11,4 +11,4 @@ displays:
     workspaces: [10]
   - name: HDMI1
     workspaces: [1,2,3,4,5,6,7,8,9]
-    randr_extra_options: "--right-of eDP1 --mode 1920x1080"
+    randr_extra_options: "--left-of eDP1 --mode 1920x1080"
