tmux: remove 'Online' from tmux bar

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -91,13 +91,13 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
-set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'mattdavis90/base16-tmux'
 set -g @plugin 'Alkindi42/tmux-bitwarden'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+#set -g @plugin 'tmux-plugins/tmux-online-status'
 
 set -g @bw-key 'T'
 set -g @bw-copy-to-clipboard 'on'
@@ -107,7 +107,7 @@ set -g @colors-base16 'gruvbox-dark-hard'
 
 # statusbar formatting
 set-option -g status-left "#{session_name} "
-set-option -g status-right "#{prefix_highlight} #(gitmux -cfg ~/.gitmux.conf '#{pane_current_path}') | Online: #{online_status} "
+set-option -g status-right "#{prefix_highlight} #(gitmux -cfg ~/.gitmux.conf '#{pane_current_path}') "
 
 set-option -wg window-status-current-format " #{window_index} #{window_name} "
 set-option -wg window-status-format " #{window_index} #{window_name} "
