picom: handle shadow in chrome popups

--- a/dot_config/picom.conf
+++ b/dot_config/picom.conf
@@ -413,6 +413,7 @@ wintypes:
 	dock = { shadow = false; clip-shadow-above = true; }
 	dnd = { shadow = false; }
 	popup_menu = { opacity = 1; }
+        menu = { shadow = false; }
 	dropdown_menu = { opacity = 1; }
 };
 
@@ -421,3 +422,4 @@ wintypes:
 opacity-rule = [
     "95:class_g    ='Alacritty'"
 ]
+
