--- a/dot_config/neofetch/config.conf
+++ b/dot_config/neofetch/config.conf
@@ -26,7 +26,7 @@ print_info() {
     info "CPU Usage" cpu_usage
     info "Disk" disk
     # info "Battery" battery
-    # info "Font" font
+    info "Font" font
     # info "Song" song
     # [[ "$player" ]] && prin "Music Player" "$player"
     info "Local IP" local_ip
@@ -694,7 +694,7 @@ disk_display="off"
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
 #           'pot', 'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="off"
+image_backend="on"
 
 # Image Source
 #
