--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -327,8 +327,8 @@ exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id systemctl --user start xsettingsd
 
 bar {
-    font pango:Hack, FontAwesome 9
-    position top
+    font pango:Hack, FontAwesome 8
+    position bottom
     mode dock
     #status_command i3status
     status_command /usr/bin/i3status-rs $HOME/.config/i3/status.toml
