tmux: set repeat-time to 0

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -6,6 +6,9 @@ set -g renumber-windows on # reorder windows when deleting..
 # start with pane 1
 set -g pane-base-index 1
 
+# unset prefix timeout
+set-option repeat-time 0
+
 # modify prefix
 unbind C-b
 set -g prefix C-a
