tmux: fix set repead-time syntax

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -7,7 +7,7 @@ set -g renumber-windows on # reorder windows when deleting..
 set -g pane-base-index 1
 
 # unset prefix timeout
-set-option repeat-time 0
+set -g repeat-time 0
 
 # modify prefix
 unbind C-b
