tmux: set base panel index to 1

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -5,6 +5,7 @@ set -g renumber-windows on # reorder windows when deleting..
 
 # start with pane 1
 set -g pane-base-index 1
+set -g base-index 1
 
 # unset prefix timeout
 set -g repeat-time 0
