i3: change worspace color from aqua to blue

--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -336,8 +336,8 @@ bar {
         separator #666666
         background $bg
         statusline $yellow
-        focused_workspace    $aqua $aqua $darkgray
-        inactive_workspace   $darkgray $darkgray $yellow
+        focused_workspace    $blue $blue $darkgray
+        inactive_workspace   $darkgray $darkgray $white
         active_workspace     $darkgray $darkgray $yellow
         urgent_workspace     $red $red $bg
     }
