--- a/dot_weechat/private_irc.conf
+++ b/dot_weechat/private_irc.conf
@@ -138,7 +138,7 @@ local_hostname = ""
 msg_kick = ""
 msg_part = "/part"
 msg_quit = "WeeChat ${info:version}"
-nicks = "seds"
+nicks = "bitwilli"
 nicks_alternate = off
 notify = ""
 password = ""
@@ -149,7 +149,7 @@ sasl_key = ""
 sasl_mechanism = plain
 sasl_password = ""
 sasl_timeout = 15
-sasl_username = "seds"
+sasl_username = "bitwilli"
 split_msg_max_length = 512
 ssl = off
 ssl_cert = ""
@@ -159,7 +159,7 @@ ssl_password = ""
 ssl_priorities = "NORMAL:-VERS-SSL3.0"
 ssl_verify = on
 usermode = ""
-username = "seds"
+username = "bitwilli"
 
 [server]
 freenode.addresses = "chat.freenode.net/6697"
@@ -175,7 +175,7 @@ freenode.ssl_verify
 freenode.password
 freenode.capabilities
 freenode.sasl_mechanism = plain
-freenode.sasl_username = "seds"
+freenode.sasl_username = "bitwilli"
 freenode.sasl_password = "${sec.data.freenode_pass}"
 freenode.sasl_key
 freenode.sasl_timeout
@@ -189,7 +189,7 @@ freenode.username
 freenode.realname
 freenode.local_hostname
 freenode.usermode = "+Ri"
-freenode.command = "/msg Nickserv identify seds ${sec.data.freenode_pass}"
+freenode.command = "/msg Nickserv identify bitwilli ${sec.data.freenode_pass}"
 freenode.command_delay = 5
 freenode.autojoin
 freenode.autorejoin = on
