kitty: update theme colors

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -15,22 +15,22 @@ bold_italic_font auto
 font_size        12.0
 
 # The foreground color
-foreground       #d5c4a1
+# foreground       #d5c4a1
 
 # The background color
-background        #1d2021
+# background        #1d2021
 
 # The foreground for selections
-selection_foreground #2f2f2f
+# selection_foreground #2f2f2f
 
 # The background for selections
-selection_background #2f2f2f
+# selection_background #2f2f2f
 
 # Set backgroud opacity
 background_opacity 0.97
 
 # The cursor color
-cursor           #d5c4a1
+# cursor           #d5c4a1
 
 # The cursor shape can be one of (block, beam, underline)
 shell_integration no-cursor
@@ -115,51 +115,51 @@ window_border_width 0
 window_margin_width 0
 
 # The color for the border of the active window
-active_border_color #ffffff
+# active_border_color #ffffff
 
 # The color for the border of inactive windows
-inactive_border_color #cccccc
+# inactive_border_color #cccccc
 
 # Tab-bar colors
-active_tab_foreground #000
-active_tab_background #eee
-inactive_tab_foreground #444
-inactive_tab_background #999
+# active_tab_foreground #000
+# active_tab_background #eee
+# inactive_tab_foreground #444
+# inactive_tab_background #999
 
 # The 16 terminal colors. There are 8 basic colors, each color has a dull and
 # bright version.
 
 # black
-color0   #1d2021
-color8   #665c54
+# color0   #1d2021
+# color8   #665c54
 
 # red
-color1   #fb4934
-color9   #fb4934
+# color1   #fb4934
+# color9   #fb4934
 
 # green
-color2    #b8bb26
-color10   #b8bb26
+# color2    #b8bb26
+# color10   #b8bb26
 
 # yellow
-color3    #fabd2f
-color11   #fabd2f
+# color3    #fabd2f
+# color11   #fabd2f
 
 # blue
-color4   #83a598
-color12  #83a598
+# color4   #83a598
+# color12  #83a598
 
 # magenta
-color5   #d3869b
-color13  #d3869b
+# color5   #d3869b
+# color13  #d3869b
 
 # cyan
-color6   #8ec07c
-color14  #8ec07c
+# color6   #8ec07c
+# color14  #8ec07c
 
 # white
-color7   #d5c4a1
-color15  #fbf1c7
+# color7   #d5c4a1
+# color15  #fbf1c7
 
 # Key mapping
 # For a list of key names, see: http://www.glfw.org/docs/latest/group__keys.html
@@ -194,3 +194,10 @@ shell /usr/bin/tmux new-session -A -D -s main
 
 # Disable ligatures under cursor
 disable_ligatures cursor
+
+
+# BEGIN_KITTY_THEME
+# Gruvbox Dark
+include current-theme.conf
+# END_KITTY_THEME
+
