--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -346,3 +346,6 @@ bar {
 
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
+
+# Fibonacci layout
+for_window [class=".*"] split toggle
