--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -190,7 +190,7 @@ hide_window_decorations titlebar-only
 allow_remote_control yes
 
 # Start on tmux
-shell /usr/bin/tmux new-session -A -D -s main
+/usr/bin/fish
 
 # Disable ligatures under cursor
 disable_ligatures cursor
