nvim: install image.nvim plugin

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -180,6 +180,10 @@ if-shell -b 'echo $XDG_SESSION_TYPE | grep -q wayland' "\
 set -g status-right-length 150
 set -g status-left-length 150
 
+# Allow images in neovim
+set -gq allow-passthrough on
+set -gq visual-activity off
+
 # source config file
 unbind r
 bind r source-file ~/.tmux.conf
