--- a/dot_config/gxkb/gxkb.cfg
+++ b/dot_config/gxkb/gxkb.cfg
@@ -5,5 +5,5 @@ never_modify_config=false
 model=pc105
 layouts=us,ru
 variants=intl,phonetic
-toggle_option=grp:alt_shift_toggle
+toggle_option=grp:ctrl_space_toggle
 compose_key_position=
