--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -27,7 +27,7 @@ font_size        12.0
 # selection_background #2f2f2f
 
 # Set backgroud opacity
-background_opacity 0.97
+# background_opacity 0.97
 
 # The cursor color
 # cursor           #d5c4a1
