tmux: soft line colors

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -138,23 +138,20 @@ set-option -wg monitor-activity on
 set-option -wg monitor-bell on
 set-option -g status-style "bg=terminal,fg=terminal"
 
-# default window title colors
-set-option -wg window-status-style bg="#3C3836",fg="#7C6F64"
-# colors for windows with activity
-set-option -wg window-status-activity-style bg="#3C3836",fg="#A89984"
-# colors for windows with bells
-set-option -wg window-status-bell-style bg="#3C3836",fg="#FE8019"
-# active window title colors
-set-option -wg window-status-current-style bg="#A89984",fg="#3C3836"
-# pane border
-set-option -g pane-active-border-style fg="#FE8019"
-set-option -g pane-border-style fg="#3C3836"
-# pane number display
-set-option -g display-panes-active-colour "#FE8019"
-set-option -g display-panes-colour "#3C3836"
-
-# clock
-set-option -wg clock-mode-colour "#FE8019"
+# Default window title colors
+set-option -wg window-status-style bg="#32302f",fg="#928374"
+# Colors for windows with activity
+set-option -wg window-status-activity-style bg="#32302f",fg="#bdae93"
+# Colors for windows with bells
+set-option -wg window-status-bell-style bg="#32302f",fg="#458588"
+# Active window title colors
+set-option -wg window-status-current-style bg="#bdae93",fg="#32302f"
+# Pane border
+set-option -g pane-active-border-style fg="#458588"
+set-option -g pane-border-style fg="#504945"
+# Pane number display
+set-option -g display-panes-active-colour "#458588"
+set-option -g display-panes-colour "#504945"
 
 # copy mode highlighting
 %if #{>=:#{version},3.2}
