--- a/dot_config/systemd/user/kanata.service
+++ b/dot_config/systemd/user/kanata.service
@@ -4,6 +4,7 @@ Description=Kanata Service
 [Service]
 ExecStartPre=/usr/bin/modprobe uinput
 ExecStart=/usr/bin/kanata
+ExecStartPost=/usr/bin/xmodmap /home/bit/.Xmodmap
 Restart=no
 
 [Install]
