aur: add libinput-gestures

--- a/dot_config/libinput-gestures.conf
+++ b/dot_config/libinput-gestures.conf
@@ -199,3 +199,6 @@ gesture pinch out	xdotool key super+s
 
 gesture pinch   in    2  xdotool key ctrl+minus
 gesture pinch   out   2  xdotool key ctrl+plus
+
+gesture swipe right 3 i3-msg workspace prev
+gesture swipe left 3 i3-msg workspace next
