config: add libinput-gesture conf

--- a/dot_config/libinput-gestures.conf
+++ b/dot_config/libinput-gestures.conf
@@ -55,28 +55,11 @@
 # also add "-w" to the internal command to allow wrapping workspaces.
 # Ensure you install wmctrl if you use _internal.
 
-# Move to next workspace (works for GNOME/KDE/etc on Wayland and Xorg)
-gesture swipe up	_internal ws_up
+gesture swipe left 2 xdotool key alt+Right
+gesture swipe right 2 xdotool key alt+Left
 
-# NOTE ABOUT FINGER COUNT:
-# The above command will configure this command for all fingers (i.e. 3
-# for 4) but to configure it for 3 fingers only, change it to:
-# gesture swipe up	3 _internal ws_up
-# Then you can configure something else for 4 fingers or leave 4 fingers
-# unconfigured. You can configure an explicit finger count like this for
-# all example commands in this configuration file.
-#
-# gesture swipe up	xdotool key super+Page_Down
-
-# Move to prev workspace (works for GNOME/KDE/etc on Wayland and Xorg)
-gesture swipe down	_internal ws_down
-# gesture swipe down	xdotool key super+Page_Up
-
-# Browser go forward (works only for Xorg, and Xwayland clients)
-gesture swipe left	xdotool key alt+Right
-
-# Browser go back (works only for Xorg, and Xwayland clients)
-gesture swipe right	xdotool key alt+Left
+gesture swipe right 3 i3-msg workspace prev
+gesture swipe left 3 i3-msg workspace next
 
 # Open new browser tag ("hold on" available since libinput 1.19)
 # gesture hold on 4 xdotool key control+t
@@ -143,23 +126,8 @@ gesture swipe right	xdotool key alt+Left
 # PINCH GESTURES:
 ###############################################################################
 
-# GNOME SHELL open/close overview (works for GNOME on Xorg only)
-gesture pinch in	xdotool key super+s
-gesture pinch out	xdotool key super+s
-
-# KDE Plasma open/close overview
-# gesture pinch in	xdotool key ctrl+F9
-# gesture pinch out	xdotool key ctrl+F9
-
-# GNOME SHELL open/close overview (works for GNOME on Wayland and Xorg)
-# Note since GNOME 3.24 on Wayland this is implemented natively so no
-# real point configuring for Wayland.
-# gesture pinch in dbus-send --session --type=method_call --dest=org.gnome.Shell /org/gnome/Shell org.gnome.Shell.Eval string:'Main.overview.toggle();'
-# gesture pinch out dbus-send --session --type=method_call --dest=org.gnome.Shell /org/gnome/Shell org.gnome.Shell.Eval string:'Main.overview.toggle();'
-
-# Optional extended pinch gestures:
-# gesture pinch clockwise <whatever command>
-# gesture pinch anticlockwise <whatever command>
+gesture pinch   in    2  xdotool key ctrl+minus
+gesture pinch   out   2  xdotool key ctrl+plus
 
 ###############################################################################
 # This application normally determines your touchpad device
@@ -196,9 +164,3 @@ gesture pinch out	xdotool key super+s
 # the value commented below. It can be any value in float secs >= 0.
 # 0 = no timeout. E.g. set it to 2 secs with "timeout 2".
 # timeout 1.5
-
-gesture pinch   in    2  xdotool key ctrl+minus
-gesture pinch   out   2  xdotool key ctrl+plus
-
-gesture swipe right 3 i3-msg workspace prev
-gesture swipe left 3 i3-msg workspace next
