--- a/dot_config/picom.conf
+++ b/dot_config/picom.conf
@@ -209,7 +209,8 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-backend = "xrender"
+backend = "glx"
+unredir-if-possible = true;
 
 # Enable/disable VSync.
 # vsync = false
