--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -170,6 +170,10 @@ seat * {
     hide_cursor 2000
 }
 
+input * {
+    xkb_options compose:ralt
+}
+
 exec swayidle -w \
      timeout 600 'swaylock -f' \
      timeout 900 'swaymsg "output * dpms off"' \
@@ -182,6 +186,7 @@ exec libinput-gestures-setup start
 exec blueman-applet
 exec easyeffects --gapplication-service
 exec aw-qt
+exec flameshot
 
 # Activate smart borders (always)
 smart_gaps on
@@ -189,24 +194,12 @@ smart_gaps on
 gaps inner 3
 gaps outer 0
 
-bar {
-    font pango:Hack, FontAwesome 8
-    position bottom
-    mode dock
-    status_command /usr/bin/i3status-rs $HOME/.config/sway/status.toml
-    colors {
-        separator #666666
-        background $bg
-        statusline $yellow
-        focused_workspace    $blue $blue $darkgray
-        inactive_workspace   $darkgray $darkgray $white
-        active_workspace     $darkgray $darkgray $yellow
-        urgent_workspace     $red $red $bg
-    }
-}
-
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
 
 # Fibonacci layout
 for_window [class=".*"] split toggle
+
+bar {
+    swaybar_command waybar
+}
