--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -140,7 +140,9 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
 
 bindsym $mod+Shift+x exec ~/.bin/lock
-#bindsym $mod+F10 exec --no-startup-id /usr/bin/xfce4-screenshooter
+
+bindgesture swipe:right workspace prev
+bindgesture swipe:left workspace next
 
 # Set gruvbox colorscheme
 set $bg #000000
