keyd: fix homerow + raise layer

--- a/etc/keyd/laptop.conf
+++ b/etc/keyd/laptop.conf
@@ -14,7 +14,7 @@ s = overloadt(control, s, 200)
 d = overloadt(meta, d, 200)
 f = overloadt(alt, f, 200)
 
-j = overloadt(rightalt, j, 200)
+j = overloadt(altgr, j, 200)
 k = overloadt(meta, k, 200)
 l = overloadt(control, l, 200)
 semicolon = overloadt(shift, semicolon, 200)
@@ -24,7 +24,7 @@ esc = capslock
 
 # --- Spacebar Layer ---
 # Hold space to activate the 'raise' layer
-space = layer(raise)
+space = overload(raise, space)
 
 [raise]
 # While space is held, these keys become arrow keys
