keyd: fix laptop media keys in raise layer

--- a/etc/keyd/laptop.conf
+++ b/etc/keyd/laptop.conf
@@ -27,19 +27,15 @@ esc = capslock
 space = overload(raise, space)
 
 [raise]
-# While space is held, these keys become arrow keys
+a = overloadt(shift, a, 200)
+s = overloadt(control, s, 200)
+d = overloadt(meta, d, 200)
+f = overloadt(alt, f, 200)
+
 h = left
 j = down
 k = up
 l = right
-
-# The other homerow keys still act as regular letters in this layer
-a = a
-s = s
-d = d
-f = f
-g = g
-semicolon = semicolon
 
 z = mute
 x = volumedown
